adding ai agent which have tools = tavily search and custom multiply

--- a/1-basicChatbot/1-basicChatbot.ipynb
+++ b/1-basicChatbot/1-basicChatbot.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Basic Chatbot with langgraph"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,16 +35,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<langgraph.graph.state.StateGraph at 0x128431010>"
+       "<langgraph.graph.state.StateGraph at 0x1205e9e50>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -48,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +64,7 @@
        "True"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -70,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,16 +89,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "ChatGroq(client=<groq.resources.chat.completions.Completions object at 0x128af6900>, async_client=<groq.resources.chat.completions.AsyncCompletions object at 0x128af7230>, model_name='llama3-8b-8192', model_kwargs={}, groq_api_key=SecretStr('**********'))"
+       "ChatGroq(client=<groq.resources.chat.completions.Completions object at 0x1205eb610>, async_client=<groq.resources.chat.completions.AsyncCompletions object at 0x1207a0050>, model_name='llama3-8b-8192', model_kwargs={}, groq_api_key=SecretStr('**********'))"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +180,7 @@
        "\"Hi! It's nice to meet you. Is there something I can help you with or would you like to chat?\""
       ]
      },
-     "execution_count": 18,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,7 +198,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "I'm just a language model, I don't have emotions or feelings like humans do, so I don't have good or bad days. I'm always here and ready to help you with any questions or tasks you may have! Is there something specific you'd like to talk about or ask?\n"
+      "Hi! I'm just a language model, so I don't have feelings or emotions like humans do, but I'm functioning properly and ready to help with any questions or tasks you may have! How about you? How's your day going?\n"
      ]
     }
    ],
@@ -199,6 +206,29 @@
     "for event in graph.stream({\"messages\":\"Hi How are you?\"}):\n",
     "    for value in event.values():\n",
     "        print(value[\"messages\"][-1].content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "================================\u001b[1m Human Message \u001b[0m=================================\n",
+      "\n",
+      "HI\n",
+      "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
+      "\n",
+      "Hi! It's nice to meet you. Is there something I can help you with or would you like to chat?\n"
+     ]
+    }
+   ],
+   "source": [
+    "for m in response['messages']:\n",
+    "    m.pretty_print()"
    ]
   },
   {
